Criação do Menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>PrettoFlix</title>
 </head>
 <body>
-
+    <header>
+        <div class="container">
+            <h2>PrettoFlix</h2>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
