adição do filme-principal, titulo, descricao e botoes

--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">AMERICAN PIE: A Primeira Vez é Inesquecível</h3>
+                <p class="descricao">Jim Kevin, Oz e Finch são quatro amigos às vésperas do baile de formatura de escola. Entre tentativas frustradas de fazer sexo com as namoradas, vigiar garotas nuas pela Internet e até atacar uma torta recém-saída do forno, os rapazes fazem um pacto: deixar a virgindade para trás antes do baile de formatura. Começam, então, as investidas mais hilariantes em busca de sexo e, principalmente, mulheres.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSITIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
