adição do kit fontawesome e icones nos botões

--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
                 <p class="descricao">Jim Kevin, Oz e Finch são quatro amigos às vésperas do baile de formatura de escola. Entre tentativas frustradas de fazer sexo com as namoradas, vigiar garotas nuas pela Internet e até atacar uma torta recém-saída do forno, os rapazes fazem um pacto: deixar a virgindade para trás antes do baile de formatura. Começam, então, as investidas mais hilariantes em busca de sexo e, principalmente, mulheres.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
                         ASSITIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/813ea651fe.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
