--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/main.css">
+   
+    <!--Owl css -->
+    <link rel="stylesheet" href="Style/Owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="Style/Owl/owl.theme.default.min.css">
+    
     <title>PrettoFlix</title>
 </head>
 <body>
@@ -38,7 +43,59 @@
         </div>
     </main>
 
-    <script src="https://kit.fontawesome.com/813ea651fe.js" crossorigin="anonymous"></script>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filmes" src="img/AmericanPie OReencontro.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/ARCANE.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Arqueiro.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Chicago Fire.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Chicago MED.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Chicago PD.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Com as Própias Mãos.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/GoT.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/House.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/HouseOfCards.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/SCANDAL.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Spider-Man.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/SUITS.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/Troia.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="img/VelozeseFuriosos9.jpg" alt="" srcset="">
+            </div>
+        </div>
+    </div>
 
+    <script src="https://kit.fontawesome.com/813ea651fe.js" crossorigin="anonymous"></script>
+    <script src="Js/owl/jquery.min.js"></script>
+    <script src="Js/owl/owl.carousel.min.js"></script>
+    <script src="Js/owl/setup.js"></script>
 </body>
 </html>
