--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/main.css">
    
+    <!--Responsividade  -->
+    <link rel="stylesheet" href="Style/responsive.css">
+
     <!--Owl css -->
     <link rel="stylesheet" href="Style/Owl/owl.carousel.min.css">
     <link rel="stylesheet" href="Style/Owl/owl.theme.default.min.css">
